# libome-fork

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/ome/: functions.h
